--- a/views/error_layout.jade
+++ b/views/error_layout.jade
@@ -16,7 +16,7 @@ html
         script(src="/libs/bootstrap-material-design/dist/js/ripples.min.js")
         script(src="/javascripts/app.js")
     body
-        nav.navbar.navbar-default.navbar-fixed-top
+        nav.navbar.navbar-inverse.navbar-fixed-top
             .container
                 .navbar-header
                     button(type="button", data-toggle="collapse", data-taget="#navbar",
