--- a/views/login_layout.jade
+++ b/views/login_layout.jade
@@ -18,7 +18,7 @@ html
         script(src="/libs/bootstrap-material-design/dist/js/ripples.min.js")
         script(src="/javascripts/app.js")
     body
-        nav.navbar.navbar-default.navbar-fixed-top
+        nav.navbar.navbar-inverse.navbar-fixed-top
             .container
                 .navbar-header
                     button(type="button", data-toggle="collapse", data-taget="#navbar",
@@ -26,9 +26,7 @@ html
                         span.sr-only Toggle navigation
                         span.icon-bar
                         span.icon-bar
-                    a.navbar-brand(href="/") OPD Service_Time
-
-
+                    a.navbar-brand(href="/") KC_Supply
         .container
             br
             br
@@ -36,7 +34,7 @@ html
                 .col-md-3
                 .col-md-5
                     block content
-        nav.navbar.navbar-default.navbar-fixed-bottom
+        nav.navbar.navbar-inverse.navbar-fixed-bottom
             .container
                 .navbar-header
                     button(type="button", data-toggle="collapse", data-taget="#navbar",
@@ -44,9 +42,6 @@ html
                         span.sr-only Toggle navigation
                         span.icon-bar
                         span.icon-bar
-                    a.navbar-brand(href="/") OPD ST.
+                    a.navbar-brand(href="/") KCSP.
                 p.navbar-text.navbar-right
-                    | โปรแกรมระยะเวลารอคอย OPD @ ศูนย์ข้อมูล โรงพยาบาลกันทรวิชัย จังหวัดมหาสารคาม
-
-
-
+                    | โปรแกรมเบิกวัสดุจ่ายกลาง @ ศูนย์ข้อมูล โรงพยาบาลกันทรวิชัย จังหวัดมหาสารคาม
