--- a/views/page/list_user.jade
+++ b/views/page/list_user.jade
@@ -1,13 +1,9 @@
-extends  ../admin_layout
+extends  ../admin_layout_user
 block scripts
     script(src="/javascripts/users.js")
 block content
     br
-    ol.breadcrumb
-        li
-            a(href="#") หน้าหลัก
-        li.active รายการผู้ใช้งาน
-    .panel.panel-primary
+    .panel.panel-inverse
         .panel-heading
             h3.panel-title
                 i.fa.fa-comments-o
@@ -24,7 +20,7 @@ block content
             //button.btn.btn-success.pull-right#btnShowModal
                 i.fa.fa-plus
                 | &nbsp; เพิ่มผู้ใช้งาน
-            table.table.striped#tblRiskUsers
+            table.table.table-hover#tblUsers
                 thead
                     tr
                         td ลำดับ
@@ -48,7 +44,7 @@ block content
                     .form-group
                         label(for="txtUsername") Username
                         input(type="text",name="username",placeholder="ชื่อผู้ใช้งาน",readonly)#txtUsername.form-control
-                    //.form-group
+                    .form-group
                         label(for="txtPassword") รหัสผ่าน
                         input(type="password",name="password",placeholder="รหัสผ่าน")#txtPassword.form-control
                     .form-group
@@ -56,7 +52,7 @@ block content
                         select.form-control#slPname
                             option(value="") กรุณาเลือกรายการ....
                             for p in data.pnames
-                                option(value="#{p.id}") #{p.name}
+                                option(value="#{p.id}") #{p.prefixnamel}
                     .form-group
                         label(for="txtFName") ชื่อ
                         input(type="text")#txtFname.form-control
@@ -74,7 +70,7 @@ block content
                         select.form-control#slLayer
                             option(value="") กรุณาเลือกรายการ....
                             for y in data.layers
-                                option(value="#{y.id}") #{y.level_username}
+                                option(value="#{y.statususer}") #{y.statusname}
                     .modal-footer
                         button.btn.btn-primary#btnSave
                             i.fa.fa-save
