--- a/views/page/login.jade
+++ b/views/page/login.jade
@@ -2,7 +2,7 @@ extends ../login_layout
 block content
     Br
 
-    .panel.panel-primary
+    .panel.panel-inverse
         .panel-heading
             h3.panel-title
                 i.glyphicon.glyphicon-user
@@ -21,5 +21,4 @@ block content
                 .form-group
                     label(for="txtPassword") รหัสผ่าน
                     input(type="password",name="password",placeholder="รหัสผ่าน")#txtPassword.form-control
-
-                button.btn.btn-primary(type="submit") Login เข้าระบบ
+                button.btn.btn-inverse(type="submit") Login เข้าระบบ
