--- a/views/page/register.jade
+++ b/views/page/register.jade
@@ -1,61 +1,64 @@
-extends  ../register_layout
+extends  ../admin_layout_user
 
 block scripts
     script(src="/javascripts/register.js")
-
 block content
-    BR
+    br
     .alert.alert-warning(role="alert",style="display: none;")#divAlert
         i.fa.fa-warning
         | &nbsp; กรอกข้อมูลไม่สมบูรณ์
-
     .alert.alert-danger.alert-dismissable(role="alert", style="display: none;")#divDuplicated
         button(type="button",data-dismiss="alert",aria-label="Close").close
             span(aria-hidden="true")
         p Username/Password นี้มีแล้วในฐานข้อมูล
-
-    .panel.panel-primary
+    .panel.panel-inverse
         .panel-heading
             h3.panel-title
                 i.glyphicon.glyphicon-user
-                | &nbsp; สมัครสมาชิก
+                | &nbsp; เพิ่มผู้ใช้งาน
         .panel-body
             .row
-                .col-md-12
+                .col-md-5
                     .form-group
-                        label(for="txtUsername") ชื่อผู้ใช้
+                        label(for="txtUsername") ชื่อผู้ใช้ :
                         input(type="text",name="username",placeholder="ชื่อผู้ใช้งาน")#txtUsername.form-control
             .row
-                .col-md-12
+                .col-md-5
                     .form-group
-                        lable(for="txtPassword") รหัสผ่าน
+                        label(for="txtPassword") รหัสผ่าน :
                         input(type="password",name="password",placeholder="รหัสผ่าน")#txtPassword.form-control
             .row
-                .col-md-12
+                .col-md-5
                     .form-group
-                        label(for="slPname") คำนำหน้า
+                        label(for="slPname") คำนำหน้า :
                         select.form-control#slPname
                             option(value="") กรุณาเลือกรายการ....
                             for p in data.pnames
-                                option(value="#{p.id}") #{p.name}
+                                option(value="#{p.id}") #{p.prefixnamel}
             .row
-                .col-md-12
+                .col-md-7
                     .form-group
-                        label(for="txtName") ชื่อ
+                        label(for="txtName") ชื่อ :
                         input(type="text",name="name",placeholder="ชื่อ")#txtName.form-control
             .row
-                .col-md-12
+                .col-md-7
                     .form-group
-                        label(for="txtLname") นามสกุล
+                        label(for="txtLname") นามสกุล :
                         input(type="text",name="lname",placeholder="นามสกุล")#txtLname.form-control
             .row
-                .col-md-12
+                .col-md-5
                     .form-group
-                        label(for="slDepartment") แผนก
-                            select#slDepartment.form-control
-                                option(value="") กรุณาเลือกรายการ....
-                                for d in data.departments
-                                    option(value="#{d.depcode}") #{d.depname}
-
-
-    button.btn.btn-success(type="button")#btnSaveregister บันทึก
+                        label(for="slDepartment") แผนก :
+                        select.form-control#slDepartment
+                            option(value="") กรุณาเลือกรายการ....
+                            for d in data.departments
+                                option(value="#{d.depcode}") #{d.depname}
+            .row
+                .col-md-5
+                    .form-group
+                        label(for="slLayer") ระดับผู้ใช้งาน :
+                        select.form-control#slLayer
+                            option(value="") กรุณาเลือกรายการ....
+                            for y in data.layers
+                                option(value="#{y.statususer}") #{y.statusname}
+    button.btn.btn-inverse(type="button")#btnSaveregister บันทึก
