--- a/views/admin_layout.jade
+++ b/views/admin_layout.jade
@@ -114,15 +114,15 @@ html
                           .ul.nav.nav-pills.nav-stacked
                               if session.level_user==1
                                   li
-                                      a(href="/admin/list_bills_receive_today")
+                                      a(href="/reports/report_items_total")
                                           i.fa.fa-file-text
                                           | &nbsp; จำนวนวัสดุที่เบิกตามช่วงเวลา
                                   li
-                                      a(href="/admin/list_bills_receive_today")
+                                      a(href="/reports/report_items_department")
                                           i.fa.fa-file-text
                                           | &nbsp; จำนวนวัสดุที่เบิกแยกตามแผนก
                                   li
-                                      a(href="/admin/list_bills_receive_today")
+                                      a(href="#")
                                           i.fa.fa-line-chart
                                           | &nbsp; กราฟ
               .col-md-3
@@ -145,7 +145,6 @@ html
                                           | &nbsp; ตั้งค่าประเภทวัสดุ
                                   li
                                       a(href="#")
-
               .col-md-2
                   br
                   .panel.panel-inverse
@@ -164,7 +163,5 @@ html
                                       a(href="#")
                                   li
                                       a(href="#")
-
-
               //.col-md-9
                   block content
