--- a/views/page/list_bills_payable_admin.jade
+++ b/views/page/list_bills_payable_admin.jade
@@ -34,7 +34,7 @@ block content
         .panel-heading
             h3.panel-title
                 i.fa.fa-list
-                | &nbsp; รายการเบิกวัสดุจ่ายกลาง
+                | &nbsp; รายการค้างจ่ายวัสดุ
         .panel-body
             table.table.table-hover#tbl_list_bills
                 thead
