--- a/views/page/material_selection.jade
+++ b/views/page/material_selection.jade
@@ -68,7 +68,7 @@ block content
                         i.fa.fa-trash-o
                         | &nbsp; ยกเลิกการทำรายการทั้งหมด
                 .col-md-3
-                    button.btn.btn-sm.btn-success#btnSave_items
+                    button.btn.btn-sm.btn-success(data-name="btnSave_items")
                         i.fa.fa-save
                         | &nbsp; บันทึก
             | &nbsp;
