--- a/views/admin_layout_approve.jade
+++ b/views/admin_layout_approve.jade
@@ -66,7 +66,7 @@ html
                                         i.fa.fa-user
                                     ul.dropdown-menu
                                         li
-                                            a(href="/users/user_profile")
+                                            a(href="/users/admin_profile")
                                                 i.fa.fa-edit
                                                     | &nbsp;&nbsp; ข้อมูลส่วนตัว
                                         li
