--- a/templates/report_bills.jade
+++ b/templates/report_bills.jade
@@ -6,7 +6,7 @@ html
         style.
             html, body {
                 margin: 0;
-                padding: 10px;
+                padding: 5px;
                 font-size: 18px;
                 font-family: 'TH Sarabun New';
             }
@@ -28,8 +28,8 @@ html
                 -moz-border-radius: 5px;
                 -webkit-border-radius: 5px;
                 border-radius: 5px;
-                margin-top: 10px;
-                margin-bottom: 10px;
+                margin-top: 5px;
+                margin-bottom: 5px;
                 text-align: center;
                 font-weight: bold;
                 border-style: solid;
@@ -216,6 +216,8 @@ html
                             tr
                                 td
                                     .head(style="width: 100%;")
+                                        strong รายการเบิกวัสดุ โรงพยาบาลกันทรวิชัย
+                                        br
                                         strong เลขที่บิล :
                                         | &nbsp; #{detail.bill}
                                         br
