--- a/views/page/show_bills_no_admin.jade
+++ b/views/page/show_bills_no_admin.jade
@@ -19,7 +19,7 @@ block content
                                     .row
                                         .col-md-10
                                             label เลขที่บิล : #{rows.bill}
-                                        .col-md-2
+                                        //.col-md-2
                                             input(type="hidden" value="#{rows.bill_no}")#txtId
                                             button#btnPrint(type="button").btn.btn-inverse.btn-sm
                                                 i.fa.fa-print
@@ -36,23 +36,63 @@ block content
                                     .row
                                         .col-md-12
                                             label สถานะ : #{rows.pay_status}
-                    table.table.table-hover#tbl_show_bills
-                        thead
-                            tr
-                                td ลำดับ
-                                td ชื่อวัสดุ
-                                td จำนวนเบิก
-                                td จำนวนจ่ายจริง
-                                td จำนวนค้างจ่าย
-                                td หน่วย
-                        tbody
-                            - var y = 0
-                            each item in items
-                                -y++
-                                tr
-                                    td(style="width: 10px;") #{y}
-                                    td #{item.kind_name}
-                                    td #{item.qty}
-                                    td #{item.pay}
-                                    td #{item.pab}
-                                    td #{item.unitname}
+                            .row
+                                .col-md-10
+                                    label วัสดุประเภทเครื่องมือ
+                                .col-md-2
+                                    input(type="hidden" value="#{rows.bill_no}")#txtId
+                                    input(type="hidden" value="1")#txtcategory
+                                    button#btnPrint(type="button").btn.btn-inverse.btn-sm
+                                        i.fa.fa-print
+                                        | &nbsp; ปริ้น
+                            table.table.table-hover
+                                thead
+                                    tr
+                                        td ลำดับ
+                                        td ชื่อวัสดุ
+                                        td จำนวนเบิก
+                                        td จำนวนจ่ายจริง
+                                        td จำนวนค้างจ่าย
+                                        td หน่วย
+                                tbody
+                                    - var y = 0
+                                    each item in items
+                                        if item.kind_category_id != 5
+                                            -y++
+                                            tr
+                                                td(style="width: 10px;") #{y}
+                                                td #{item.kind_name}
+                                                td #{item.qty}
+                                                td #{item.pay}
+                                                td #{item.pab}
+                                                td #{item.unitname}
+                            .row
+                                .col-md-10
+                                    label วัสดุประเภทผ้า
+                                .col-md-2
+                                    input(type="hidden" value="#{rows.bill_no}")#txtId
+                                    input(type="hidden" value="2")#txtcategory2
+                                    button#btnPrint2(type="button").btn.btn-inverse.btn-sm
+                                        i.fa.fa-print
+                                        | &nbsp; ปริ้น
+                            table.table.table-hover
+                                thead
+                                    tr
+                                        td ลำดับ
+                                        td ชื่อวัสดุ
+                                        td จำนวนเบิก
+                                        td จำนวนจ่ายจริง
+                                        td จำนวนค้างจ่าย
+                                        td หน่วย
+                                tbody
+                                    - var y = 0
+                                    each item in items
+                                        if item.kind_category_id == 5
+                                            -y++
+                                            tr
+                                                td(style="width: 10px;") #{y}
+                                                td #{item.kind_name}
+                                                td #{item.qty}
+                                                td #{item.pay}
+                                                td #{item.pab}
+                                                td #{item.unitname}
